force-app/main/default/objects/NSF_Resource__c/NSF_Resource__c.object-meta.xml
<CustomObject>
    <label>NSF Resource</label>
    <nameField>
        <displayFormat>R-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>NSF Resources</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>