force-app/main/default/objects/NSF_Resource__c/fields/Link__c.field-meta.xml
<CustomField>
    <fullName>Link__c</fullName>
    <label>Link</label>
    <length>1024</length>
    <type>LongTextArea</type>
</CustomField>