force-app/main/default/objects/NSF_Resource__c/fields/NSF_SectionId__c.field-meta.xml
<CustomField>
    <fullName>NSF_SectionId__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Section</label>
    <referenceTo>NSF_Section__c</referenceTo>
    <relationshipLabel>Resources</relationshipLabel>
    <relationshipName>NSF_Resources</relationshipName>
    <type>Lookup</type>
</CustomField>